--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 <body>
   <div class="flex-container">
     <div class="card" id="sed">
-  <img src="images/icon-sedans.svg" alt="Sedan Icon">
+  <img src="./icon-sedans.svg" alt="Sedan Icon">
   <h2>Sedans</h2>
   <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
     <a href="/">Learn More</a>
     </div>
     <div class="card" id="suv">
-  <img src="images/icon-suvs.svg" alt="SUV Icon">
+  <img src="./icon-suvs.svg" alt="SUV Icon">
   <h2>SUVs</h2>
   <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
     <a href="/">Learn More</a>
     </div>
     <div class="card" id="lux">
-  <img src="images/icon-luxury.svg" alt="Luxury Car Icon">
+  <img src="./icon-luxury.svg" alt="Luxury Car Icon">
   <h2>Luxury</h2>
   <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
     <a href="/">Learn More</a>
