--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="flex-container">
     <div class="card" id="sed">
-  <img src="./images/icon-sedans.svg" alt="Sedan Icon">
+  <img src="images/icon-sedans.svg" alt="Sedan Icon">
   <h2>Sedans</h2>
   <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
     <a href="/">Learn More</a>
